페러프레이징 백작업 1차 커밋 및 푸시

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
-spring.application.name=TranslationProject
+spring.application.name=react_Project
+
+# MariaDB Configuration
+spring.datasource.url=jdbc:mariadb://localhost:3306/webdb
+spring.datasource.username=webuser
+spring.datasource.password=webuser
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# OpenAI API Key
+openai.api.key=${OPENAI_API_KEY}
+
+# OpenAI ?? (Paraphrase ?)
+openai.model=gpt-3.5-turbo
+
+# Hibernate settings for MariaDB
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+#logging
+logging.level.org.springframework=info
+logging.level.com.busanit501=debug
+logging.level.org.springframework.security=debug
+
+com.busanit5012.jwt.secret=${JWT_SECRET}
+
