번역 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.password=webuser
 # OpenAI API Key
 openai.api.key=${OPENAI_API_KEY}
 
+google.api.key=${GOOGLE_API_KEY}
+
 # OpenAI ?? (Paraphrase ?)
 openai.model=gpt-3.5-turbo
 
