깃허브 api KEY 설정 문제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,4 @@ logging.level.org.springframework=info
 logging.level.com.busanit501=debug
 logging.level.org.springframework.security=debug
 
-com.busanit5012.jwt.secret=${JWT.SECRET.KET}
-
+com.busanit5012.jwt.secret=${JWT_SECRET}
